# Miniwin

./: .gitignore  CMakeLists.txt  README.md  ali3528_mtitoolchain.cmake  ali3528_toolchain.cmake  build3213.sh  build3258.sh  build3528.sh  buildx86.sh  env.sh  mtibuild.sh  mtienv.sh  national-toolchain.cmake  satellites.json
include/cairo/: cairo-ngl.h
include/curl/: Makefile  Makefile.in
include/epg/: descriptors.h  dvbepg.h  satellite.h
include/gui/: abslistview.h  animateview.h  app.h  application.h  channelepgview.h  desktop.h  dvbapp.h  graph_device.h  groupview.h  gzstream.h  label.h  layout.h  preferences.h  rect.h  resourcemanager.h  stacklayout.h  textfield.h  toolbar.h  transparentview.h  uibase.h  widget.h  window.h  windows.h
include/gui/cairomm/: refptr.h  surface.h
include/pixman/: pixman-version.h
include/porting/: ngl_errors.h  ngl_graph.h  ngl_ir.h  ngl_log.h  ngl_mediaplayer.h  ngl_os.h  ngl_pvr.h  ngl_tuner.h  ngl_types.h
src/acs/: CMakeLists.txt  main.c  sctest.c  t struct timespec:q
src/acs/src/: va_ctrl.c  va_http.c  va_os.c  va_pvr.c  va_xnvm.c
src/apps/: CMakeLists.txt
src/apps/ntvplus/: CMakeLists.txt  appmenus.h  channeleditor.cc  channellist.cc  channelpf.cc  channelsearch.cc  dvbapp.cc  dvbapp.h  main.cc  mainmenu.cc  multimedia.cc  netsetting.cc  ntvcommon.cc  ntvcommon.h  ntvplus.pak  ntvwindow.cc  ntvwindow.h  playcontrol.cc  sat_tp_editor.cc  sattpmanager.cc  searchresultwindow.cc  set_actions.cc  setting.cc  timermanager.cc  tvguide.cc  tvpvr.cc
src/apps/ntvplus/acs/: CAEventSource.h  CMakeLists.txt  va2ngl.cc
src/apps/ntvplus/acs/src/: va_ctrl.cc  va_dmx.c  va_dscr.c  va_init.c  va_os.c  va_pvr.cc  va_sc.c  va_schip.c
src/apps/ntvplus/assets/: settings.json  strings-RUS.json  strings-SPA.json  strings-THA.json  strings-eng.json
src/apps/ntvplus/assets/strings/: strings-POL.json  strings-SLK.json  strings-TUR.json
src/apps/samples/: .simplewin.cc.swp  CMakeLists.txt  game2048.cc  helloworld.cc  loopersample.cc  multiwindow.cc  simplewin.cc
src/cas/: CMakeLists.txt
src/cas/conax/: conax.c
src/cas/ideto/: ideto.c
src/epg/: .tvdata.cc.swp  CMakeLists.txt  descriptors.cc  descriptors.h  dtvplayer.cc  dvbepg.cc  dvbepg.h  favgroup.cc  favgroup.h  si_table.cc  si_table.h  tvdata.cc  tvdata.h  utils.cc
src/epg/tests/: epg_unittests.cc
src/gui/: .CMakeLists.txt.swp  CMakeLists.txt  respack  testz.pak
src/gui/core/: .graph_context.cc.swp  .preferences.cc.swp  .windowmanager.cc.swp  \  abslistview.cc  abslistview.h  animateview.cc  app.cc  app.h  button.cc  button.h  channelepgview.cc  channelepgview.h  desktop.cc  desktop.h  docview.cc  editbox.cc  editbox.h  filepak.cc  filepak.h  fontmanager.cc  fontmanager.h  graph_context.cc  graph_context.h  graph_device.cc  graph_device.h  groupview.cc  gzstream.cc  imagebutton.cc  imageview.cc  keyboard.cc  keyboard.h  keyboardview.cc  keyboardview.h  layout.cc  layout.h  linearlayout.cc  linearlayout.h  listview.cc  listview.h  (+28 more)
src/gui/core/cairomm/: Makefile.in  basicbitmap.cc  cairo_jpg.cc  cairommconfig.h  context.cc  context.h  ngl_surface.cc  ngl_surface.h  surface.cc  surface.h
src/gui/core/svg/: isvgRenderer.cc  isvgRenderer.h  isvgRendererState.cc  isvgRendererState.h  nanosvg_renderer.cc  nanosvgrast.h  svg_renderer.cc
src/gui/looper/: .EventLoop.cpp.swp  EventLoop.cpp  EventLoop.h  EventSource.h  FileEvents.h  FileSource.h  GenericSignalSource.cpp  GenericSignalSource.h  IdleSource.h  InputEventSource.cpp  SignalFD.cpp  SignalFD.h  SignalSource.cpp  SignalSource.h  TimeoutSource.cpp  TimeoutSource.h  TimerFD.cpp  TimerFD.h  Utility.h
src/gui/tests/: CMakeLists.txt  controls_tests.cc  dtv_tests.cc  surface_unittests.cc  testmain.cc  window_tests.cc
src/gui/tools/: CMakeLists.txt  lansplit.cc  tsreceiver  tsreceiver.cc  tsreceiver.h  tssender.cc  tsserver.cc
src/modules/: CMakeLists.txt  fs_mgr_fstab.cc  netlinkevent.cc  usbmanager.cc  volumemanager.cc
src/porting/: CMakeLists.txt  \  diseqc.c  kltest.c  ngl_log.c  ngl_rfb.c  tsreceiver.cc  tssender.cc
src/porting/ali3528/: CMakeLists.txt  ngl_audio.c  ngl_descramble.c  ngl_disp.c  ngl_dmx.c  ngl_dmx.cc  ngl_dsc.c  ngl_graph.c  ngl_ir.cc  ngl_msgq.c  ngl_os.c  ngl_pvr.c  ngl_smc.c  ngl_snd.c  ngl_timer.c  ngl_tuner.c  ngl_video.c  platform.cmake
src/porting/gx3213/: CMakeLists.txt  ngl_crypt.c  ngl_dmx.c  ngl_graph.c  ngl_gx_graph.c  ngl_ir.cc  ngl_tuner.c  platform.cmake
src/porting/inc/: diseqc.h  ngl_disp.h  ngl_dmx.h  ngl_dsc.h  ngl_graph.h  ngl_ir.h  ngl_log.h  ngl_msgq.h  ngl_os.h  ngl_pvr.h  ngl_tuner.h  ngl_types.h  ngl_video.h  tssender.h  va_tuner.h
src/porting/montage/: CMakeLists.txt  ngl_gx_graph.c  ngl_ir.cc
src/porting/nglx86/: .ngl_vnc_graph.c.swp  CMakeLists.txt  ngl_audio.c  ngl_disp.c  ngl_dmx.c  ngl_dsc.c  ngl_graph.c  ngl_ir.cc  ngl_mediaplayer.c  ngl_msgq.c  ngl_os.c  ngl_pvr.c  ngl_rfb_graph.c  ngl_timer.c  ngl_tuner.c  ngl_video.c  ngl_vnc_graph.c  platform.cmake
src/porting/tests/: '  CMakeLists.txt  av_unittests.cc  canvas.cc  canvas.h  dmx_unittests.cc  event_unittests.cc  fontmanager.cc  fontmanager.h  graph_unittest.cc  ir_unittests.cc  mem_unittests.cc  msgq_unittests.cc  mutex_unittests.cc  sem_unittests.cc  testmain.cc  timer_unittests.cc  tuner_unittests.cc
src/porting/x86/: CMakeLists.txt  ngl_ca_platform.c  ngl_fb_graph.c  ngl_gtk_graph.c  ngl_ir.cc  ngl_x11_graph.c  platform.cmake
src/tools/: CMakeLists.txt  main.cc  respack  tssender
src/tvmodules/: CMakeLists.txt
src/tvmodules/dsmcc-receive/: CMakeLists.txt
src/tvmodules/epg/: .dvbepg.cc.swp  .tvdata.h.swp  CMakeLists.txt  descriptors.cc  descriptors.h  dsmcc.h  dtvplayer.cc  dvbepg.cc  favorite.cc  lrucache.h  satellite.cc  si_table.cc  si_table.h  tvdata.cc  tvdata.h  utils.cc
src/tvmodules/epg/tests/: CMakeLists.txt  epg_unittests.cc
